src/styles/components/_table.scss
div.table {

  display: flex;
  flex-direction: column;
  text-align: center;

 .table-header {
    border-bottom: 1px solid #666;
    p {
      font-weight: bold;
      font-size: 105%; }}

  .table-body {
    overflow-y: scroll;
  }

  .table-row {

    display: flex;
    flex-direction: row;

    .table-entry {
      width: 2em;
      padding: 1%;
    }
  }
}

